--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel": "^5.8.23",
     "babel-core": "^5.8.23",
     "babel-jest": "^5.3.0",
+    "babel-plugin-node-env-inline": "^1.0.1",
     "babelify": "^6.3.0",
     "browserify": "^11.2.0",
     "browserify-shim": "^3.8.10",
