--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "testEs7": "BABEL_JEST_STAGE=0 jest",
     "testDebug": "node-debug --nodejs --harmony ./node_modules/jest-cli/bin/jest.js --runInBand",
     "build": "./build.sh",
-    "gulpBuild": "gulp clean build"
+    "gulpBuild": "gulp clean build",
+    "jest": "jest"
   },
   "jest": {
     "rootDir": "./web/static/js",
